[package]
name = "watermark_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.88"
bytesize = "1.3.0"
flutter_rust_bridge = "=2.3.0"
humantime = "2.1.0"
image = "0.25.2"
indicatif = "0.17.8"
lazy_static = "1.5.0"
log = "0.4.22"
parking_lot = "0.12.3"
simplelog = {version="0.12.2",futures=["time"]}
time = "0.3.36"
exif={git="https://github.com/kamadak/exif-rs"}
